--- a/Without Discord/addons/sourcemod/translations/ckSurf.phrases.txt
+++ b/Without Discord/addons/sourcemod/translations/ckSurf.phrases.txt
@@ -695,12 +695,12 @@
 	"QuakeSounds1"
 	{
 		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] Quake sounds enabled."
+		"en"        "[{1}CK{2}] Quake sounds enabled."
 	}
 	"QuakeSounds2"
 	{
 		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] Quake sounds disabled."
+		"en"        "[{1}CK{2}] Quake sounds disabled."
 	}
 	"HideSpecs1"
 	{
